<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/share"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/topBarCardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="10dp"
                app:cardMaxElevation="10dp"
                app:layout_constraintTop_toTopOf="parent">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.flaviofaria.kenburnsview.KenBurnsView
                        android:id="@+id/posterKenBurns"
                        android:layout_width="match_parent"
                        android:layout_height="350dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/poster_crimes" />

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/card_detail_foreground"
                        android:contentDescription="@string/foregroundPoster" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/titleDetail"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginEnd="16dp"
                            android:text="@string/dummyTitle"
                            android:textAlignment="textEnd"
                            android:textColor="@color/white"
                            android:textSize="24sp"
                            app:layout_constraintBottom_toTopOf="@+id/subTitle"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/roundedImageView" />

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:id="@+id/subTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="16dp"
                            android:layout_marginBottom="16dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent">

                            <TextView
                                android:id="@+id/duration"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="16dp"
                                android:text="@string/dummyDuration"
                                android:textColor="@color/inactiveText"
                                app:layout_constraintBottom_toBottomOf="@+id/divider"
                                app:layout_constraintEnd_toStartOf="@+id/divider"
                                app:layout_constraintTop_toTopOf="@+id/divider" />

                            <com.makeramen.roundedimageview.RoundedImageView
                                android:id="@+id/divider"
                                android:layout_width="3dp"
                                android:layout_height="20dp"
                                android:layout_marginTop="8dp"
                                android:scaleType="centerCrop"
                                android:src="@color/inactiveText"
                                app:layout_constraintEnd_toEndOf="@id/date"
                                app:layout_constraintStart_toStartOf="@id/duration"
                                app:layout_constraintTop_toTopOf="parent"
                                app:riv_corner_radius="4dp" />

                            <TextView
                                android:id="@+id/date"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="16dp"
                                android:text="@string/dummyDate"
                                android:textColor="@color/inactiveText"
                                app:layout_constraintBottom_toBottomOf="@+id/divider"
                                app:layout_constraintStart_toEndOf="@+id/divider"
                                app:layout_constraintTop_toTopOf="@+id/divider" />

                        </androidx.constraintlayout.widget.ConstraintLayout>

                        <TextView
                            android:id="@+id/userScore"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:layout_marginTop="16dp"
                            android:layout_marginEnd="16dp"
                            android:background="@drawable/background_user_score"
                            android:gravity="center"
                            android:text="@string/dummyUserScore"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <ImageButton
                            android:id="@+id/backButton"
                            android:layout_width="36dp"
                            android:layout_height="36dp"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="16dp"
                            android:background="@drawable/ic_back"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            android:contentDescription="@string/backButton" />

                        <View
                            android:id="@+id/roundedImageView"
                            android:layout_width="120dp"
                            android:layout_height="180dp"
                            android:layout_marginStart="16dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </FrameLayout>

            </androidx.cardview.widget.CardView>


            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/subPoster"
                android:layout_width="120dp"
                android:layout_height="180dp"
                android:layout_marginStart="16dp"
                android:adjustViewBounds="true"
                android:elevation="10dp"
                android:src="@drawable/poster_crimes"
                app:layout_constraintBottom_toBottomOf="@+id/topBarCardView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/topBarCardView"
                app:riv_corner_radius="10dp" />


            <TextView
                android:id="@+id/titleOverview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/overviewTitle"
                android:textColor="@color/text"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/subPoster" />


            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/dividerBody"
                android:layout_width="100dp"
                android:layout_height="3dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:scaleType="centerCrop"
                android:src="@color/colorPrimary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titleOverview"
                app:riv_corner_radius="2dp" />

            <TextView
                android:id="@+id/overview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/dummyOverview"
                android:textColor="@color/detailBodyText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dividerBody" />


            <TextView
                android:id="@+id/titleGenre"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/genreTitle"
                android:textColor="@color/text"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/overview" />


            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/dividerBodyGenre"
                android:layout_width="100dp"
                android:layout_height="3dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:scaleType="centerCrop"
                android:src="@color/colorPrimary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titleGenre"
                app:riv_corner_radius="2dp" />

            <TextView
                android:id="@+id/genre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/dummyGenre"
                android:textColor="@color/detailBodyText"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dividerBodyGenre" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ripple_deadline_button"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/share"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>